0.0.12    (? May 2005)
- Added XML item database
- Fixed crash when map server is down
- New map (Shimris cave)
- New monsters (yellow and red slime, black scorpion)
- Dynamic loading of monstersets
- New items (dagger, sharp knife, leather shirt, fancy hat)
- Added volume sliders in setup window
- Added attack and level up samples
- Fixed NPC lists
- Improved sound engine
- Added fade-in and fade-out features
- Attack animation synced with attack speed
- Added icon to application window
- Added player names below players
- Fixed speech and emoticons position 
- Speech and damage display time are now fps independent
- Scrollbars are now fully skinned
- Sound samples are now loaded through resource manager
- Added "Register" button in login screen
- Added warning message to use at least 4 characters as user name

0.0.11.2  (8 April 2005)
- Damage text now floats upwards
- Mouse walk now only works with left mouse button
- Fixed frequest crash on startup and exit that crept into 0.0.11.1

0.0.11.1  (7 April 2005)
- Buttons are now disabled when appropriate
- Fixed players standing on top of NPCs
- Fixed getting stuck when trying to sell with nothing to sell
- Fixed setup dialog windowed/fullscreen switching behaviour
- Fixed gui opacity slider (win32)
- Fixed building up false inventory when warping
- Fixed crash on startup with sound enabled (win32)

0.0.11  (3 April 2005)
- Added new maps, tiles and monsters
- Added walking with mouse by clicking where you want to go
- Added diagonal walking with keyboard
- Added a choice dialog of how many items to drop
- Added handling of window close button
- Added config option for GUI opacity (guialpha)
- Added warp between two maps
- Changed chat entry behaviour to focus on enter and defocus on send message
- Upgraded to Guichan 0.3.0
- Chat now appears in a window
- Beings now walk a lot smoother
- Completed support for new map format (collision, compression)
- Fixed problem where players would often turn up with black hair