@@ -1,4 +1,5 @@
 0.0.12    (? May 2005)
+- Right mouse button to attack (enables also ranged attacks)
 - Added XML item database
 - Fixed crash when map server is down
 - New map (Shimris cave)
